--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^11.1.8",
     "@prisma/client": "^6.19.0",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.3",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -40,6 +41,7 @@
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
